[gd_scene load_steps=24 format=3 uid="uid://3h8e7vl6t7kd"]

[ext_resource type="Script" uid="uid://b75wbqfeciso3" path="res://Scripts/fireball.gd" id="1_1nrly"]
[ext_resource type="Texture2D" uid="uid://csqyeqdf8g3h1" path="res://Sprite/Fireball.png" id="2_8nwq3"]
[ext_resource type="PackedScene" uid="uid://dsfkx41iqe8cj" path="res://Scene/Components/attack_component.tscn" id="3_ky0ia"]
[ext_resource type="Script" uid="uid://cn1qs5me8qxeo" path="res://Scripts/attack_component.gd" id="4_quf4u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cq0sk"]
atlas = ExtResource("2_8nwq3")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgvpv"]
atlas = ExtResource("2_8nwq3")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmt43"]
atlas = ExtResource("2_8nwq3")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4seqs"]
atlas = ExtResource("2_8nwq3")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i23ht"]
atlas = ExtResource("2_8nwq3")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ailkv"]
atlas = ExtResource("2_8nwq3")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12sv1"]
atlas = ExtResource("2_8nwq3")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnqt5"]
atlas = ExtResource("2_8nwq3")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4wyq"]
atlas = ExtResource("2_8nwq3")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6h44"]
atlas = ExtResource("2_8nwq3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbfvj"]
atlas = ExtResource("2_8nwq3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bog0h"]
atlas = ExtResource("2_8nwq3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyxap"]
atlas = ExtResource("2_8nwq3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrb3v"]
atlas = ExtResource("2_8nwq3")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j27dk"]
atlas = ExtResource("2_8nwq3")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jabwm"]
atlas = ExtResource("2_8nwq3")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss2o5"]
atlas = ExtResource("2_8nwq3")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_eiq4p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq0sk")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgvpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmt43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4seqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i23ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ailkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12sv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnqt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4wyq")
}],
"loop": false,
"name": &"explode",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6h44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbfvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bog0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyxap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrb3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j27dk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jabwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss2o5")
}],
"loop": true,
"name": &"moving",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kqwx2"]
radius = 3.0

[node name="Fireball" type="Node2D"]
script = ExtResource("1_1nrly")

[node name="Fireball_sprite" type="AnimatedSprite2D" parent="."]
z_index = 10
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_eiq4p")
animation = &"explode"
autoplay = "moving"

[node name="attack_component" parent="." instance=ExtResource("3_ky0ia")]
collision_layer = 8
collision_mask = 7
script = ExtResource("4_quf4u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_component"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_kqwx2")

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="body_entered" from="attack_component" to="." method="_on_attack_component_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
